<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEntryActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:text="@string/create_new_entry"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editEntrySubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:hint="@string/subject"
        android:inputType=""
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editEntryContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:hint="@string/content"
        android:inputType="text"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editModifiedDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:hint="@string/date"
        android:inputType="text"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_weight="1"
        android:onClick="saveEntry"
        android:text="@string/save" />

</LinearLayout>