<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:onClick="viewAll"
        android:text="@string/view_all" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:onClick="createNew"
        android:text="@string/create_new_entry" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:onClick="viewEntriesOnMap"
        android:text="@string/map_view" />

    <EditText
        android:id="@+id/searchItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:autofillHints=""
        android:hint="@string/search"
        android:inputType="text" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/search_icon"
        android:onClick="searchAll"
        app:srcCompat="@android:drawable/ic_search_category_default" />

    <FrameLayout
        android:id="@+id/entriesHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <!--<ListView
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />-->

</LinearLayout>