<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditEntryActivity">

    <TextView
        android:id="@+id/entryID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="italic" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="5dp"
        android:text="@string/subjectLabel"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editEntrySubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"

        android:layout_marginHorizontal="5dp"
        android:autofillHints=""
        android:hint="@string/edit_subject"
        android:inputType="text"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="5dp"
        android:text="@string/contentEdit"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editEntryContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:autofillHints=""
        android:hint="@string/edit_content"
        android:inputType="text"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/date_modified_label"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editModifiedDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:autofillHints=""
        android:hint="@string/edit_date_modified"
        android:inputType="text"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginHorizontal="10dp"
            android:onClick="saveEdit"
            android:text="@string/update"
            android:textSize="12sp" />

        <Button
            android:id="@+id/deleteEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="10dp"
            android:onClick="deleteEntry"
            android:text="@string/delete"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/forecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="12sp"
        android:textStyle="italic" />

    <fragment
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp" />

</LinearLayout>